# pale

./: .gitignore  .sourcery.yaml  CHANGELOG.md  README.md  __init__.py  conftest.py  create_notebook.py  listen.py  main_listen.py  pyproject.toml  today.py
.github/workflows/: publish.yaml  run-tests-on-push.yml  versioning.yml
docs/: brick_formats.md  chapter_blurbs.md  idea_brick_formats.md  idea_formats.md  keywords_by_chapter.md  ropeterm_breakdown.md  ropeterm_exkegation.md  ropeterm_explanation.md
docs/ch17_brick_formats/: br00000.md  br00001.md  br00002.md  br00003.md  br00004.md  br00005.md  br00006.md  br00011.md  br00012.md  br00013.md  br00019.md  br00020.md  br00021.md  br00022.md  br00023.md  br00024.md  br00025.md  br00026.md  br00027.md  br00028.md  br00029.md  br00036.md  br00042.md  br00044.md  br00045.md  br00050.md  br00051.md  br00052.md  br00053.md  br00055.md  br00056.md  br00057.md  br00058.md  br00059.md  br00113.md  br00115.md  br00116.md  br00117.md  ii00012.md  ii00022.md  (+4 more)
docs/ch17_idea_brick_formats/: br00001.md  br00002.md  br00003.md  br00004.md  br00005.md  br00006.md  br00011.md  br00012.md  br00013.md  br00019.md  br00020.md  br00021.md  br00022.md  br00023.md  br00024.md  br00025.md  br00026.md  br00027.md  br00028.md  br00029.md  br00036.md  br00042.md  br00043.md  br00044.md  br00045.md  br00046.md  br00050.md  br00051.md  br00052.md  br00053.md  br00054.md  br00055.md  br00056.md  br00057.md  br00058.md  br00059.md  br00070.md  br00113.md  br00115.md  br00116.md  (+1 more)
docs/ch17_idea_formats/: br00004.md  br00005.md  (+51 more)
src/: listen.py
(+1719 files in other folders)
