[project]
authors = [{name = "Emmanuel Schalk", email = "emmanuelschalk@gmail.com"}]
dependencies = [
  "compact_json",
  "flask",
  "flask_cors",
  "importlib",
  "pandas",
  "plotly",
  "openpyxl",
  "sqlalchemy",
  "xlsxwriter",
]
description = ""
license = {text = "MIT"}
name = "keg"
readme = "README.md"
requires-python = ">=3.7"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
no_sections = true
profile = "black"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

# [tool.semantic_release]
# branch = "main"
# build_command = ""
# changelog_file = "CHANGELOG.md"
# plugins = [
#   "semantic_release.hooks.commit_parser",
#   "semantic_release.hooks.tag_formatter",
# ]
# tag_format = "v{version}"
# upload_to_pypi = false
# version_variable = "keg/__init__.py:__version__"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
